# Parent-Onboarding-AI

Documents/Gauntlet/ZappierTriggersAPI/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
Documents/Gauntlet/ZappierTriggersAPI/.github/workflows/: deploy-production.yml  deploy-staging.yml  docker.yml  lint.yml  test.yml
Documents/Gauntlet/ZappierTriggersAPI/backend/: alembic.ini  requirements-prod.txt  requirements.txt
Documents/Gauntlet/ZappierTriggersAPI/backend/app/: __init__.py  main.py
Documents/Gauntlet/ZappierTriggersAPI/backend/app/api/: deps.py
Documents/Gauntlet/ZappierTriggersAPI/backend/app/api/v1/: router.py
Documents/Gauntlet/ZappierTriggersAPI/backend/app/api/v1/endpoints/: dlq.py  events.py  health.py  inbox.py  subscriptions.py
Documents/Gauntlet/ZappierTriggersAPI/backend/app/core/: __init__.py  config.py  database.py  exception_handlers.py  exceptions.py  logging.py  middleware.py  openapi.py  rate_limiter.py  redis.py  security.py  tracing.py  utils.py
Documents/Gauntlet/ZappierTriggersAPI/backend/app/models/: __init__.py  api_key.py  base.py  event.py  event_delivery.py  subscription.py
Documents/Gauntlet/ZappierTriggersAPI/backend/app/schemas/: __init__.py  api_key.py  base.py  batch.py  dlq.py  error.py  event.py  health.py  inbox.py  subscription.py
Documents/Gauntlet/ZappierTriggersAPI/backend/app/services/: __init__.py  api_key_service.py  delivery_service.py  dlq_service.py  event_service.py  health_service.py  inbox_service.py  queue_service.py  replay_service.py  streaming_service.py  subscription_service.py
Documents/Gauntlet/ZappierTriggersAPI/backend/app/workers/: __init__.py  delivery_worker.py
Documents/Gauntlet/ZappierTriggersAPI/backend/migrations/: README.md  env.py
Documents/Gauntlet/ZappierTriggersAPI/backend/migrations/versions/: 20241130_000001_001_initial_schema.py
Documents/Gauntlet/ZappierTriggersAPI/cli/: README.md  pyproject.toml
Documents/Gauntlet/ZappierTriggersAPI/cli/tests/: __init__.py  test_client.py  test_commands.py
Documents/Gauntlet/ZappierTriggersAPI/cli/triggers_cli/: __init__.py  client.py  config.py  main.py  output.py
Documents/Gauntlet/ZappierTriggersAPI/cli/triggers_cli/commands/: dlq.py  events.py  forward.py  inbox.py
Documents/Gauntlet/ZappierTriggersAPI/docs/: ADDITIONAL_FEATURES.md  PRD.md
Documents/Gauntlet/ZappierTriggersAPI/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
Documents/Gauntlet/ZappierTriggersAPI/frontend/src/: App.tsx  index.css
Documents/Gauntlet/ZappierTriggersAPI/frontend/src/components/: Layout.tsx
Documents/Gauntlet/ZappierTriggersAPI/frontend/src/lib/: api.ts
Documents/Gauntlet/ZappierTriggersAPI/frontend/src/pages/: DLQ.tsx  Dashboard.tsx  Events.tsx  Inbox.tsx  Stream.tsx
Documents/Gauntlet/ZappierTriggersAPI/infrastructure/terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
Documents/Gauntlet/ZappierTriggersAPI/infrastructure/terraform/bootstrap/: main.tf
Documents/Gauntlet/ZappierTriggersAPI/infrastructure/terraform/deploy/: main.tf  terraform.tfvars.example  variables.tf
Documents/Gauntlet/ZappierTriggersAPI/infrastructure/terraform/environments/dev/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
Documents/Gauntlet/ZappierTriggersAPI/infrastructure/terraform/environments/production/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
Documents/Gauntlet/ZappierTriggersAPI/infrastructure/terraform/environments/staging/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
Documents/Gauntlet/ZappierTriggersAPI/infrastructure/terraform/modules/alb/: main.tf  outputs.tf  variables.tf
Documents/Gauntlet/ZappierTriggersAPI/infrastructure/terraform/modules/app/: main.tf  outputs.tf  variables.tf
Documents/Gauntlet/ZappierTriggersAPI/infrastructure/terraform/modules/cloudfront/: main.tf  outputs.tf  variables.tf
Documents/Gauntlet/ZappierTriggersAPI/infrastructure/terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
Documents/Gauntlet/ZappierTriggersAPI/infrastructure/terraform/modules/elasticache/: main.tf  outputs.tf  variables.tf
Documents/Gauntlet/ZappierTriggersAPI/infrastructure/terraform/modules/frontend-s3/: main.tf  outputs.tf  variables.tf
Documents/Gauntlet/ZappierTriggersAPI/infrastructure/terraform/modules/monitoring/: main.tf  outputs.tf  variables.tf
Documents/Gauntlet/ZappierTriggersAPI/infrastructure/terraform/modules/rds/: main.tf  outputs.tf  variables.tf
Documents/Gauntlet/ZappierTriggersAPI/infrastructure/terraform/modules/sqs/: main.tf  outputs.tf  variables.tf
Documents/Gauntlet/ZappierTriggersAPI/infrastructure/terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
Documents/Gauntlet/ZappierTriggersAPI/infrastructure/terraform/shared/: main.tf  outputs.tf  variables.tf
Documents/Gauntlet/ZappierTriggersAPI/scripts/: deploy.sh  export_openapi.py  init-db.sql  localstack-init.sh  run_tests.sh
Documents/Gauntlet/ZappierTriggersAPI/sdk/python/: README.md  pyproject.toml
Documents/Gauntlet/ZappierTriggersAPI/sdk/python/tests/: __init__.py  test_client.py  test_events.py
Documents/Gauntlet/ZappierTriggersAPI/sdk/python/zapier_triggers/: __init__.py  client.py  exceptions.py
Documents/Gauntlet/ZappierTriggersAPI/sdk/python/zapier_triggers/models/: __init__.py  common.py  dlq.py  event.py  inbox.py
Documents/Gauntlet/ZappierTriggersAPI/sdk/python/zapier_triggers/resources/: __init__.py  dlq.py  events.py  inbox.py
Documents/Gauntlet/ZappierTriggersAPI/tests/: conftest.py  factories.py
Documents/Gauntlet/ZappierTriggersAPI/tests/integration/: test_dlq.py  test_error_handling.py  test_event_replay.py  test_event_streaming.py  test_events_api.py  test_health_api.py
Documents/Gauntlet/ZappierTriggersAPI/tests/load/: locustfile.py
Documents/Gauntlet/ZappierTriggersAPI/tests/unit/: test_event_service.py  test_exceptions.py  test_logging.py  test_subscription_service.py
(+40 files in other folders)
