[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zapier-triggers"
version = "0.1.0"
description = "Official Python SDK for the Zapier Triggers API"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Zapier", email = "developers@zapier.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.urls]
Documentation = "https://github.com/zapier/zapier-triggers-python#readme"
Repository = "https://github.com/zapier/zapier-triggers-python"
Issues = "https://github.com/zapier/zapier-triggers-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["zapier_triggers"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
